# stackage-snapshot-workaround

bytestring-builder/: bytestring-builder.cabal
bytestring-builder/src/: BytestringBuilderWorkaround.hs
