cabal-version:       2.4

name:                bytestring-builder
version:             0.0.0.0
synopsis:            Workaround for the empty package issue in rules_haskell (#999)
homepage:            workaround
license:             NONE
author:              Workaround
maintainer:          workaround

library
  exposed-modules:     BytestringBuilderWorkaround
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
